# backend.ai-hook

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Dockerfile.alpine  Dockerfile.alpine3.8  Dockerfile.centos  Dockerfile.centos8.0  Dockerfile.ubuntu  Dockerfile.ubuntu18.04  Dockerfile.ubuntu22.04  Makefile  README.md  build.sh  docker.centos.entrypoint.sh  docker.centos8.0.entrypoint.sh  exports.txt  test.sh  utils.cc  utils.hh
.github/workflows/: release.yml  release_aarch64.yml  release_x86_64.yml
baihook/: CMakeLists.txt  compat.c  patch-libs.cc  patch-libs.hh  utils.hh
test/: CMakeLists.txt  test-hook.cc  test-hooked.cc  test-numpy.py
